﻿Version 2.9.8
MVC 6
- Packages file path in the .xproj is now corrected automatically with the update to the latest version of 
TemplateBuilder and the new Wizard I added to it.

Version 2.9.7
MVC 6
- All NuGet packages updated.
- Dropped TagHelpers NuGet package dependency on the base NuGet package.
- Refactored AtomActionResult to use IHostingEnvironment. 
- Added RemoveServerHttpHeader extension method for IApplicationBuilder to the main NuGet package.
- Used the RemoveServerHttpHeader method in the Configure method in Startup.cs.
- Subresource Integrity tag helper added to TagHelpers NuGet package and _Layout.cshtml.
- URL's in ContentDeliveryNetwork updated to include the https: scheme to use with Subresource Integrity.
- Renamed ApplicationBuilderExtensions.UseBoilerplate to ApplicationBuilderExtensions.UseUrlHelperExtensions.
- Renamed ApplicationBuilderExtensions.RemoveServerHttpHeader to ApplicationBuilderExtensions.RunNotFound.
- Added UseHttpException, which allows the use of <see cref="HttpException"/> as an alternative method of returning an 
error result.
- Added UseInternalServerErrorOnException, which returns a 500 Internal Server Error response when an unhandled 
exception occurs.
- Renamed everything from ASP.NET 5 to ASP.NET Core.

Version 2.9.6
MVC 5
- Removed AntiXss package as it was causing a warning dialogue box to show up. It was not used and people can add it 
themselves if they need it.
MVC 6
- Automatically run Mocha JavaScript tests using gulp-mocha-phantomjs.
- Added gulp-mocha-phantomjs to package.json.
- Added a test task to gulpfile.js.
- Renamed Test folder to Tests.

Version 2.9.5
MVC 5 & 6
- Updated Newtonsoft.Json to 8.0.2.
- Updated jQuery to 2.2.0.
- Updated Bootstrap 3.3.6.
MVC 5
- Switched from Twitter.Bootstrap.Less NuGet package to Bootstrap.Less.
MVC 6
- Use an absolute expiration instead of a sliding one for the sitemap, just in case people are dynamically generating 
the sitemap.
- Updated Font Awesome to 4.5.0.