@@ -2,5 +2,5 @@
 <packages>
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
   <package id="NuGet.Core" version="2.10.1" targetFramework="net45" />
-  <package id="TemplateBuilder" version="1.1.4.7-beta" targetFramework="net45" />
+  <package id="TemplateBuilder" version="1.1.4.9-beta" targetFramework="net45" />
 </packages>
