@@ -30,8 +30,8 @@
     <Assembly>Boilerplate.Wizard, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</Assembly>
     <FullClassName>Boilerplate.Wizard.Mvc6FeatureWizard</FullClassName>
   </WizardExtension>
-  <!--<WizardExtension>
-    <Assembly>TemplateBuilder, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</Assembly>
+  <WizardExtension>
+    <Assembly>TemplateBuilder, Version=1.2.0.0, Culture=neutral, PublicKeyToken=null</Assembly>
     <FullClassName>TemplateBuilder.FixArtifactsPathWizard</FullClassName>
-  </WizardExtension>-->
+  </WizardExtension>
 </VSTemplate>
